force-app/main/default/objects/Work_Unit__c/Work_Unit__c.object-meta.xml
<CustomObject>
    <description>Effective work package and timesheet eligibility unit inside an engagement.</description>
    <label>Work Unit</label>
    <nameField>
        <label>Work Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>