force-app/main/default/objects/Work_Unit__c/fields/Acceptance_Required__c.field-meta.xml
<CustomField><fullName>Acceptance_Required__c</fullName><defaultValue>false</defaultValue><label>Acceptance Required</label><type>Checkbox</type></CustomField>