force-app/main/default/objects/Work_Unit__c/fields/Acceptance_Status__c.field-meta.xml
<CustomField><fullName>Acceptance_Status__c</fullName><label>Acceptance Status</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Not Required</fullName><default>true</default><label>Not Required</label></value><value><fullName>Pending</fullName><default>false</default><label>Pending</label></value><value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value><value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
</valueSetDefinition></valueSet></CustomField>