force-app/main/default/objects/Work_Unit__c/fields/Accepted_By__c.field-meta.xml
<CustomField><fullName>Accepted_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Accepted By</label><referenceTo>User</referenceTo><relationshipLabel>Accepted Work Units</relationshipLabel><relationshipName>Accepted_Work_Units</relationshipName><type>Lookup</type></CustomField>