force-app/main/default/objects/Work_Unit__c/fields/Actual_Cost__c.field-meta.xml
<CustomField><fullName>Actual_Cost__c</fullName><description>Actual cost of work performed at the performance cutoff.</description><label>Actual Cost</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>