force-app/main/default/objects/Work_Unit__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField><fullName>Actual_End_Date__c</fullName><description>Actual delivery completion date.</description><label>Actual End Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>