force-app/main/default/objects/Work_Unit__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField><fullName>Actual_Start_Date__c</fullName><description>Actual delivery start date.</description><label>Actual Start Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>