force-app/main/default/objects/Work_Unit__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField><fullName>Assigned_Resource__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Assigned Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Assigned Work Units</relationshipLabel><relationshipName>Assigned_Work_Units</relationshipName><type>Lookup</type></CustomField>