force-app/main/default/objects/Work_Unit__c/fields/Baseline_End_Date__c.field-meta.xml
<CustomField><fullName>Baseline_End_Date__c</fullName><label>Baseline End Date</label><type>Date</type></CustomField>