force-app/main/default/objects/Work_Unit__c/fields/Baseline_Start_Date__c.field-meta.xml
<CustomField><fullName>Baseline_Start_Date__c</fullName><label>Baseline Start Date</label><type>Date</type></CustomField>