force-app/main/default/objects/Work_Unit__c/fields/Cost_Performance_Index__c.field-meta.xml
<CustomField><fullName>Cost_Performance_Index__c</fullName><description>Earned value divided by actual cost.</description><label>Cost Performance Index</label><precision>8</precision><scale>3</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>