force-app/main/default/objects/Work_Unit__c/fields/Critical_Path__c.field-meta.xml
<CustomField><fullName>Critical_Path__c</fullName><defaultValue>false</defaultValue><label>Critical Path</label><type>Checkbox</type></CustomField>