force-app/main/default/objects/Work_Unit__c/fields/Daily_Hours__c.field-meta.xml
<CustomField><fullName>Daily_Hours__c</fullName><defaultValue>0</defaultValue><label>Daily Hours</label><precision>5</precision><scale>2</scale><type>Number</type></CustomField>