force-app/main/default/objects/Work_Unit__c/fields/Defect_Count__c.field-meta.xml
<CustomField><fullName>Defect_Count__c</fullName><description>Open and closed defects attributable to this work unit.</description><label>Defect Count</label><precision>8</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>