force-app/main/default/objects/Work_Unit__c/fields/Deliverable__c.field-meta.xml
<CustomField><fullName>Deliverable__c</fullName><defaultValue>false</defaultValue><label>Deliverable</label><type>Checkbox</type></CustomField>