force-app/main/default/objects/Work_Unit__c/fields/Earned_Value__c.field-meta.xml
<CustomField><fullName>Earned_Value__c</fullName><description>Budgeted cost of work performed at the performance cutoff.</description><label>Earned Value</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>