force-app/main/default/objects/Work_Unit__c/fields/Estimate_At_Completion__c.field-meta.xml
<CustomField><fullName>Estimate_At_Completion__c</fullName><description>Forecast total project cost.</description><label>Estimate at Completion</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>