force-app/main/default/objects/Work_Unit__c/fields/Forecast_Completion_Date__c.field-meta.xml
<CustomField><fullName>Forecast_Completion_Date__c</fullName><description>Current expected completion date.</description><label>Forecast Completion Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>