force-app/main/default/objects/Work_Unit__c/fields/Forecast_End_Date__c.field-meta.xml
<CustomField><fullName>Forecast_End_Date__c</fullName><description>Current forecast end date.</description><label>Forecast End Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>