force-app/main/default/objects/Work_Unit__c/fields/Forecast_Start_Date__c.field-meta.xml
<CustomField><fullName>Forecast_Start_Date__c</fullName><description>Current forecast start date.</description><label>Forecast Start Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>