force-app/main/default/objects/Work_Unit__c/fields/Last_Progress_Update__c.field-meta.xml
<CustomField><fullName>Last_Progress_Update__c</fullName><label>Last Progress Update</label><type>DateTime</type></CustomField>