force-app/main/default/objects/Work_Unit__c/fields/Milestone__c.field-meta.xml
<CustomField><fullName>Milestone__c</fullName><defaultValue>false</defaultValue><label>Milestone</label><type>Checkbox</type></CustomField>