force-app/main/default/objects/Work_Unit__c/fields/Milestone_Delay_Days__c.field-meta.xml
<CustomField><fullName>Milestone_Delay_Days__c</fullName><description>Forecast or actual delay versus the approved baseline.</description><label>Milestone Delay Days</label><precision>6</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>