force-app/main/default/objects/Work_Unit__c/fields/Owner_User__c.field-meta.xml
<CustomField><fullName>Owner_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Work Unit Owner</label><referenceTo>User</referenceTo><relationshipLabel>Owned Work Units</relationshipLabel><relationshipName>Owned_Work_Units</relationshipName><type>Lookup</type></CustomField>