force-app/main/default/objects/Work_Unit__c/fields/Percent_Complete__c.field-meta.xml
<CustomField><fullName>Percent_Complete__c</fullName><defaultValue>0</defaultValue><label>Percent Complete</label><precision>5</precision><scale>2</scale><trackHistory>true</trackHistory><type>Percent</type></CustomField>