force-app/main/default/objects/Work_Unit__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>