force-app/main/default/objects/Work_Unit__c/fields/Planned_Hours__c.field-meta.xml
<CustomField><fullName>Planned_Hours__c</fullName><defaultValue>0</defaultValue><label>Planned Hours</label><precision>16</precision><scale>2</scale><type>Number</type></CustomField>