force-app/main/default/objects/Work_Unit__c/fields/Planned_Value__c.field-meta.xml
<CustomField><fullName>Planned_Value__c</fullName><description>Budgeted cost of work scheduled at the performance cutoff.</description><label>Planned Value</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>