force-app/main/default/objects/Work_Unit__c/fields/Project_Module__c.field-meta.xml
<CustomField><fullName>Project_Module__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Project Module</label><referenceTo>Project_Module__c</referenceTo><relationshipLabel>Work Units</relationshipLabel><relationshipName>Work_Units</relationshipName><type>Lookup</type></CustomField>