force-app/main/default/objects/Work_Unit__c/fields/Schedule_Performance_Index__c.field-meta.xml
<CustomField><fullName>Schedule_Performance_Index__c</fullName><description>Earned value divided by planned value.</description><label>Schedule Performance Index</label><precision>8</precision><scale>3</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>