force-app/main/default/objects/Work_Unit__c/fields/Sequence__c.field-meta.xml
<CustomField><fullName>Sequence__c</fullName><defaultValue>1</defaultValue><label>Sequence</label><precision>6</precision><scale>0</scale><type>Number</type></CustomField>