force-app/main/default/objects/Work_Unit__c/fields/Test_Pass_Percent__c.field-meta.xml
<CustomField><fullName>Test_Pass_Percent__c</fullName><description>Passed tests divided by executed tests.</description><label>Test Pass Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>