force-app/main/default/objects/Work_Unit__c/fields/Work_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Work_Unit_Code__c</fullName>
    <label>Work Unit Code</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>