force-app/main/default/objects/Work_Unit__c/validationRules/Work_Unit_Acceptance.validationRule-meta.xml
<ValidationRule><fullName>Work_Unit_Acceptance</fullName><active>true</active><errorConditionFormula>AND(ISPICKVAL(Status__c, "Complete"), Acceptance_Required__c, NOT(ISPICKVAL(Acceptance_Status__c, "Accepted")))</errorConditionFormula><errorMessage>Acceptance evidence is required before this deliverable can complete.</errorMessage></ValidationRule>