force-app/main/default/objects/Work_Unit__c/validationRules/Work_Unit_Baseline_Order.validationRule-meta.xml
<ValidationRule><fullName>Work_Unit_Baseline_Order</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Baseline_Start_Date__c)), NOT(ISBLANK(Baseline_End_Date__c)), Baseline_End_Date__c &lt; Baseline_Start_Date__c)</errorConditionFormula><errorMessage>Baseline end date cannot precede baseline start date.</errorMessage></ValidationRule>