force-app/main/default/objects/Work_Unit__c/validationRules/Work_Unit_Completion_Range.validationRule-meta.xml
<ValidationRule><fullName>Work_Unit_Completion_Range</fullName><active>true</active><errorConditionFormula>OR(Percent_Complete__c &lt; 0, Percent_Complete__c &gt; 100)</errorConditionFormula><errorMessage>Work-unit completion must be between 0 and 100.</errorMessage></ValidationRule>