force-app/main/default/objects/Work_Unit__c/validationRules/Work_Unit_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Unit_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Work unit end date cannot precede the start date.</errorMessage>
</ValidationRule>