force-app/main/default/objects/Work_Unit__c/validationRules/Work_Unit_Module_Matches_Project.validationRule-meta.xml
<ValidationRule><fullName>Work_Unit_Module_Matches_Project</fullName><active>true</active><errorConditionFormula>AND(NOT(ISBLANK(Project_Module__c)), Project_Module__r.Engagement__c &lt;&gt; Engagement__c)</errorConditionFormula><errorMessage>Work unit module must belong to the same project.</errorMessage></ValidationRule>