force-app/main/default/objects/Work_Unit__c/listViews/Milestones_And_Acceptance.listView-meta.xml
<ListView><fullName>Milestones_And_Acceptance</fullName><columns>NAME</columns><columns>Work_Unit_Code__c</columns><columns>Engagement__c</columns><columns>Milestone__c</columns><columns>Acceptance_Status__c</columns><columns>End_Date__c</columns><filterScope>Everything</filterScope><filters><field>Acceptance_Required__c</field><operation>equals</operation><value>1</value></filters><label>Milestones and Acceptance</label></ListView>